view project using negative magnification centered everything justify-content and gave pink green orange purple images independent flexbox to prevent distortion

--- a/style.css
+++ b/style.css
@@ -37,10 +37,12 @@ body {
 
 .hero {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     width: 50%;
-    padding: 0 200px;
+    padding: 50px 200px;
     color: aliceblue;
+
 }
 
 button {
@@ -53,10 +55,11 @@ button {
 .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .middle-container {
-    padding: 0 200px;
+    padding: 20px 200px;
     color: aliceblue;
     background-color:darkcyan;
 }
@@ -65,28 +68,83 @@ strong {
     display: flex;
     justify-content: center;
     font-size: 50px;
-    padding-top: 10px;
+    padding-top: 30px;
 }
 
 .container2 {
     display: flex;
     justify-content: center;
-    flex-shrink:0;
+    align-self: center;
+    padding: 40px 80px;
+    align-self: center;
 }
 
 .pink,
 .green,
 .orange,
-.purple,
+.purple {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 400px;
+}
+
 .text {
     display: flex;
-    flex-basis: 0 0 auto;
     text-align: center;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    align-self: center;
+    justify-content: center;
     flex-direction: column;
     color: whitesmoke;
     font-size: 20px;
-    gap: 0 30px;
-    padding-bottom: 40px;
+    font-weight: bolder;
+    flex-grow: 0;
+}
+
+.end-container {
+    display: flex;
+    flex-direction: column;
+    background-color: slategray;
+    color:white;
+    font-size: 40px;
+    justify-content: center;
+    text-align: left;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-right:350px;
+    padding-left: 300px;
+    flex-wrap:wrap;
+}
+
+.last-part {
+    display:flex;
+}
+span {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 60px 45px;
+
+}
+
+p {
+    display: flex;
+    align-self: flex-end;
+    padding-right: 20px;
+    font-size: 30px;
+}
+
+.call-to-action {
+    background-color: darkgray;
+    display: flex;
+    justify-content: center;
+    padding: 20px 100px;
+}
+
+.bottom-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
